@@ -1,5 +1,16 @@
 2014-04-04  Joseph Pecoraro  <pecoraro@apple.com>
 
+        Web Inspector: Log JS Exceptions to System Console if JavaScriptCoreOutputConsoleMessagesToSystemConsole enabled
+        https://bugs.webkit.org/show_bug.cgi?id=131241
+
+        Reviewed by Timothy Hatcher.
+
+        * inspector/JSGlobalObjectInspectorController.cpp:
+        (Inspector::JSGlobalObjectInspectorController::reportAPIException):
+        Log the exception to the system console if system console output is enabled.
+
+2014-04-04  Joseph Pecoraro  <pecoraro@apple.com>
+
         Web Inspector: Provide a way for JSContext console to log to system console
         https://bugs.webkit.org/show_bug.cgi?id=131050
 
